EXTRA_DIST = 	\
Animal.h	\
Cafard.h	\
Citerne.h	\
Clan.h		\
CommonEnd.h	\
Ddutil.h	\
Fourmi.h	\
GTKInterface.h	\
Global.h	\
GraphXproc.h	\
GraphXstruct.h	\
GraphXtools.h	\
gGraphX.hh	\
IOsf.h		\
Init.h		\
Larve.h		\
LinuxDefs.h	\
Ouvrier.h	\
Pheromone.h	\
Reine.h		\
Resource.h	\
Room.h		\
SFourmis.h	\
Sentinelle.h	\
StdAfx.h	\
Systeme.h	\
Tunnel.h	\
Utils.h		\
WinInterface.h	\
Wonders.h	\
debutils.h	\
resrc1.h	\
User.h		\
DataMap.h	\
macros.h	\
SDLInterface.h
